--- a/bin/LoginScene.fxml
+++ b/bin/LoginScene.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,25 +13,25 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="loginWindow" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WindowControl">
+<BorderPane fx:id="loginWindow" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WindowControl">
    <top>
       <AnchorPane fx:id="titleBar" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#moveWindow2" onMousePressed="#moveWindow1" prefHeight="24.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fx:id="title" layoutX="22.0" layoutY="12.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Goated Grades" textOrigin="CENTER" AnchorPane.leftAnchor="26.0">
+            <Text fx:id="title" layoutX="22.0" layoutY="12.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Goated Grades" textOrigin="CENTER" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="4.0">
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font>
             </Text>
-            <Button fx:id="minimizeB" layoutX="528.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="24.0" text="1" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="maximizeB" layoutX="552.0" mnemonicParsing="false" onAction="#maximize" prefHeight="24.0" prefWidth="24.0" text="2" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="closeB" layoutX="576.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="24.0" text="3" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="minimizeB" layoutX="528.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="24.0" textAlignment="CENTER" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="maximizeB" layoutX="552.0" mnemonicParsing="false" onAction="#maximize" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="closeB" layoutX="576.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <ImageView fx:id="titleIcon" fitHeight="20.0" fitWidth="20.0" layoutX="-87.0" layoutY="-63.0" pickOnBounds="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.topAnchor="2.0">
                <image>
                   <Image url="@../graphics/temporaryIcon.jpg" />
                </image>
             </ImageView>
             <Rectangle fx:id="TLrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Rectangle fx:id="Trs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="292.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="0.0" />
+            <Rectangle fx:id="Trs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="592.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="0.0" />
             <Rectangle fx:id="TRrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="314.0" layoutY="-88.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <Rectangle fx:id="SLrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="4.0" />
             <Rectangle fx:id="SRrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0" />
@@ -39,16 +41,22 @@
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
         <content>
-          <AnchorPane>
+          <AnchorPane prefHeight="370.0" prefWidth="590.0">
                <children>
-                  <PasswordField alignment="CENTER" layoutX="75.0" layoutY="114.0" promptText="Password" />
-                  <PasswordField alignment="CENTER" layoutX="75.0" layoutY="89.0" promptText="Username" />
-                  <Button layoutX="124.0" layoutY="139.0" mnemonicParsing="false" text="Log In" />
-                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="112.0" layoutY="14.0" pickOnBounds="true">
+                  <PasswordField alignment="CENTER" layoutX="221.0" layoutY="210.0" promptText="Password" />
+                  <TextField alignment="CENTER" layoutX="221.0" layoutY="185.0" promptText="Username" />
+                  <Button layoutX="345.0" layoutY="210.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
+                  <Button layoutX="270.0" layoutY="243.0" mnemonicParsing="false" text="Log In" />
+                  <ImageView fitHeight="133.0" fitWidth="324.0" layoutX="134.0" layoutY="45.0" pickOnBounds="true">
                      <image>
                         <Image url="@../graphics/temporaryIcon.jpg" />
                      </image>
                   </ImageView>
+                  <Hyperlink layoutX="335.0" layoutY="235.0" text="Register" textAlignment="CENTER">
+                     <font>
+                        <Font size="8.0" />
+                     </font>
+                  </Hyperlink>
                </children>
             </AnchorPane>
         </content>
@@ -57,14 +65,14 @@
    <right>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle fx:id="Rrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="172.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Rectangle fx:id="Rrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="372.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
    </right>
    <left>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <Rectangle fx:id="Lrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="172.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Rectangle fx:id="Lrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="372.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
    </left>
@@ -72,7 +80,7 @@
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
             <Rectangle fx:id="BLrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-            <Rectangle fx:id="Brs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="292.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" />
+            <Rectangle fx:id="Brs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="592.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" />
             <Rectangle fx:id="BRrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
