--- a/src/MainScene.fxml
+++ b/src/MainScene.fxml
@@ -1,8 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<BorderPane fx:id="loginWindow" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WindowControl">
+   <top>
+      <AnchorPane fx:id="titleBar" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#moveWindow2" onMousePressed="#moveWindow1" prefHeight="24.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text fx:id="title" layoutX="22.0" layoutY="12.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Goated Grades" textOrigin="CENTER" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="4.0">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Text>
+            <Button fx:id="minimizeB" layoutX="528.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="24.0" textAlignment="CENTER" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="maximizeB" layoutX="552.0" mnemonicParsing="false" onAction="#maximize" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="closeB" layoutX="576.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <ImageView fx:id="titleIcon" fitHeight="20.0" fitWidth="20.0" layoutX="-87.0" layoutY="-63.0" pickOnBounds="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.topAnchor="2.0">
+               <image>
+                  <Image url="@../graphics/temporaryIcon.jpg" />
+               </image>
+            </ImageView>
+            <Rectangle fx:id="TLrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Rectangle fx:id="Trs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="592.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="0.0" />
+            <Rectangle fx:id="TRrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="314.0" layoutY="-88.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Rectangle fx:id="SLrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="4.0" />
+            <Rectangle fx:id="SRrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0" />
+         </children>
+      </AnchorPane>
+   </top>
+   <center>
+      <ScrollPane BorderPane.alignment="CENTER">
+        <content>
+          <AnchorPane prefHeight="370.0" prefWidth="590.0">
+               <children>
+                  <VBox layoutX="278.0" layoutY="61.0" prefHeight="200.0" prefWidth="590.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <AnchorPane prefHeight="50.0" prefWidth="200.0">
+                           <children>
+                              <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="-79.0" layoutY="-50.0" pickOnBounds="true" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="0.0">
+                                 <image>
+                                    <Image url="@../graphics/temporaryIcon.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <ScrollPane prefHeight="320.0" prefWidth="590.0">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                          </content>
+                        </ScrollPane>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
+   </center>
+   <right>
+      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
+         <children>
+            <Rectangle fx:id="Rrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="372.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
+   </right>
+   <left>
+      <AnchorPane BorderPane.alignment="CENTER">
+         <children>
+            <Rectangle fx:id="Lrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="372.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
+   </left>
+   <bottom>
+      <AnchorPane BorderPane.alignment="CENTER">
+         <children>
+            <Rectangle fx:id="BLrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+            <Rectangle fx:id="Brs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="592.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" />
+            <Rectangle fx:id="BRrs" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" width="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+         </children>
+      </AnchorPane>
+   </bottom>
 </BorderPane>
-
